--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,3 @@
 body {
-    background-color: bisque;
-}
-
-h1 {
-    text-align: center;
-}
-
-li {
-    margin-bottom: 15px;
+    background-color:lightgrey;
 }
